[package]
name = "discord-finder"
version = "0.1.0"
license = "MIT"
description = "A very small crate you can use to get discord.gg's server links."
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
minreq = { version = "2.1", features = ["https"] }
serde = { version = "1.0", features = ["derive"] }
string-tools = "0.1.0"
serde_json = "1.0"